--- a/laravel-core/package.json
+++ b/laravel-core/package.json
@@ -29,6 +29,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/progress": "^0.2.7",
         "lucide-react": "^0.408.0",
+        "react-loading": "^2.0.3",
         "react-modal": "^3.16.1",
         "react-toastify": "^10.0.5"
     }
